Update privacy policy with detailed information
Expanded the privacy policy to include detailed sections on data collection, usage, sharing, security, children's privacy, and account deletion process.

--- a/privacy_policy_wordmap.html
+++ b/privacy_policy_wordmap.html
@@ -1,32 +1,74 @@
-1. How to delete your account
-If you want to delete your WordMap account and all associated data, please send an email to:
+WordMap respects your privacy. This Privacy Policy explains how we collect, use, and protect your information when you use the WordMap mobile application.
 
+2. Information We Collect
+
+We may collect the following types of data:
+
+Email address (when signing in with Google or Apple)
+
+User ID (Firebase UID)
+
+App usage data (for analytics and improvement)
+
+Device information (such as device model, OS version)
+
+Advertising data (via Google AdMob)
+
+We do not collect sensitive personal information.
+
+3. How We Use Your Information
+
+We use collected data to:
+
+Provide and improve app functionality
+
+Personalize user experience
+
+Display ads using Google AdMob
+
+Maintain app security and performance
+
+4. Data Sharing
+
+We may share limited data with trusted third-party services such as:
+
+Google Firebase
+
+Google AdMob
+
+These services are used only to operate and improve the app.
+
+5. Data Security
+
+We take reasonable measures to protect your information. Data is transmitted securely and stored using trusted cloud services.
+
+6. Children's Privacy
+
+WordMap is not intended for children under the age of 13. We do not knowingly collect personal data from children.
+
+7. Account Deletion
+
+You can request deletion of your account and associated data at any time.
+
+To delete your account, send an email to:
 📧 wordmap@khaledux.de
 
-Include the subject: “Delete My WordMap Account”
+Please include:
 
-You must include the email address you used to sign in (Google or Apple).
+Subject: Delete My WordMap Account
 
-2. What data will be deleted?
+The email address used to sign in
 
-When your request is processed:
+After confirmation:
 
 Your Firebase Authentication account will be deleted
 
-Your UID will be removed
+Your UID and associated data will be removed
 
-Your email and display name will be removed
+Processing time: up to 7 days
 
-No personal data will remain stored in our systems
+8. Contact Us
 
-WordMap does not store any additional personal data.
-
-3. Processing time
-
-Account deletion requests are processed within 7 days.
-
-4. Contact
-
-If you need help, contact us at:
+If you have any questions about this Privacy Policy, contact us at:
 
 📧 hey@khaledux.de
